[gd_scene load_steps=10 format=2]

[ext_resource path="res://4. Scenes/AsteroidSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://4. Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://1. GFX/Fonts/Kenney Future.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://4. Scenes/Menus/welcomeMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.294118 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.294118 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 1 )
Button/styles/normal = null
Button/styles/pressed = SubResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false

[node name="welcomeMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 2 )]
layer = -1

[node name="AsteroidSpawner" parent="Background" instance=ExtResource( 1 )]

[node name="CenterContainer" type="CenterContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/CenterContainer"]
margin_left = 421.0
margin_top = 248.0
margin_right = 603.0
margin_bottom = 352.0
custom_constants/separation = 40

[node name="NewGameButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_right = 182.0
margin_bottom = 32.0
custom_styles/normal = SubResource( 5 )
text = "New game"

[node name="LoadGameButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
visible = false
margin_top = 72.0
margin_right = 198.0
margin_bottom = 104.0
custom_styles/normal = SubResource( 5 )
text = "Load game"

[node name="QuitButton" type="Button" parent="Background/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 182.0
margin_bottom = 104.0
custom_styles/normal = SubResource( 5 )
text = "Quit"

[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="Background/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
